<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="20sp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/judul_aktivitas"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/value_judul_aktivitas"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text=""
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="20sp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/counterlabel"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/titik_dua"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/value_counter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text=""
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnCapture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/teal_700"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/teal_700"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="510dp"
                android:layout_weight="1"
                android:layout_margin="10sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>